[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Theme/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/game_over.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="GameOver" type="CanvasLayer"]
layer = 10

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.403922 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -32.0
margin_right = 48.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Control/VBoxContainer"]
margin_right = 96.0
margin_bottom = 18.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Restart"

[node name="MainMenu" type="Button" parent="Control/VBoxContainer"]
margin_top = 22.0
margin_right = 96.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Back to Main Menu"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
margin_top = 44.0
margin_right = 96.0
margin_bottom = 64.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Quit"
[connection signal="pressed" from="Control/VBoxContainer/Restart" to="Control" method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MainMenu" to="Control" method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="Control" method="_on_Quit_pressed"]
